add cache and temp files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,22 @@ Salutem/obj/Release/Salutem.csprojAssemblyReference.cache
 Salutem/obj/Release/Salutem.csproj.CoreCompileInputs.cache
 Domain/obj/Release/netstandard2.0/Domain.csproj.CoreCompileInputs.cache
 Domain/obj/Release/netstandard2.0/Domain.AssemblyInfoInputs.cache
+SalutemData/obj/SalutemData.csproj.nuget.g.props
+SalutemData/obj/SalutemData.csproj.nuget.cache
+SalutemData/obj/Debug/netstandard2.0/SalutemData.csprojAssemblyReference.cache
+SalutemBusiness/obj/Debug/netstandard2.0/SalutemBusiness.csproj.CoreCompileInputs.cache
+.vs/Salutem/v15/.suo
+SalutemBusiness/obj/project.assets.json
+SalutemBusiness/obj/SalutemBusiness.csproj.nuget.g.props
+SalutemBusiness/obj/SalutemBusiness.csproj.nuget.cache
+SalutemBusiness/obj/Debug/netstandard2.0/SalutemBusiness.csprojAssemblyReference.cache
+SalutemDomain/obj/SalutemDomain.csproj.nuget.cache
+SalutemDomain/obj/Debug/netstandard2.0/SalutemDomain.csprojAssemblyReference.cache
+SalutemDomain/obj/Debug/netstandard2.0/SalutemDomain.csproj.CoreCompileInputs.cache
+SalutemData/obj/project.assets.json
+Salutem/obj/Debug/Salutem.csproj.CoreCompileInputs.cache
+.vs/config/applicationhost.config
+SalutemDomain/obj/project.assets.json
+SalutemData/obj/Debug/netstandard2.0/SalutemData.csproj.CoreCompileInputs.cache
+Salutem/obj/Debug/Salutem.csprojAssemblyReference.cache
+SalutemDomain/obj/SalutemDomain.csproj.nuget.g.props
