add bin and obj folders to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,45 @@ SalutemDomain/obj/project.assets.json
 SalutemData/obj/Debug/netstandard2.0/SalutemData.csproj.CoreCompileInputs.cache
 Salutem/obj/Debug/Salutem.csprojAssemblyReference.cache
 SalutemDomain/obj/SalutemDomain.csproj.nuget.g.props
+SalutemBusiness/bin/Debug/netstandard2.0/SalutemData.pdb
+SalutemBusiness/bin/Debug/netstandard2.0/SalutemData.dll
+SalutemBusiness/bin/Debug/netstandard2.0/SalutemBusiness.pdb
+SalutemBusiness/bin/Debug/netstandard2.0/SalutemBusiness.dll
+Salutem/obj/Debug/Salutem.pdb
+Salutem/obj/Debug/Salutem.dll
+Salutem/obj/Debug/Salutem.csproj.FileListAbsolute.txt
+Salutem/bin/SalutemDomain.pdb
+SalutemDomain/obj/Debug/netstandard2.0/SalutemDomain.pdb
+SalutemData/bin/Debug/netstandard2.0/SalutemDomain.dll
+SalutemData/bin/Debug/netstandard2.0/SalutemData.pdb
+SalutemData/bin/Debug/netstandard2.0/SalutemData.dll
+SalutemBusiness/obj/Debug/netstandard2.0/SalutemBusiness.pdb
+SalutemBusiness/obj/Debug/netstandard2.0/SalutemBusiness.dll
+SalutemBusiness/obj/Debug/netstandard2.0/SalutemBusiness.csproj.FileListAbsolute.txt
+SalutemBusiness/bin/Debug/netstandard2.0/SalutemDomain.pdb
+SalutemBusiness/bin/Debug/netstandard2.0/SalutemDomain.dll
+SalutemDomain/obj/Debug/netstandard2.0/SalutemDomain.dll
+SalutemDomain/obj/Debug/netstandard2.0/SalutemDomain.csproj.FileListAbsolute.txt
+SalutemDomain/bin/Debug/netstandard2.0/SalutemDomain.pdb
+SalutemDomain/bin/Debug/netstandard2.0/SalutemDomain.dll
+SalutemData/obj/Debug/netstandard2.0/SalutemData.pdb
+SalutemData/obj/Debug/netstandard2.0/SalutemData.dll
+SalutemData/obj/Debug/netstandard2.0/SalutemData.csproj.FileListAbsolute.txt
+SalutemData/bin/Debug/netstandard2.0/SalutemDomain.pdb
+Salutem/bin/SalutemDomain.dll
+Salutem/bin/SalutemData.pdb
+Salutem/bin/SalutemData.dll
+Salutem/bin/SalutemBusiness.pdb
+Salutem/bin/SalutemBusiness.dll
+Salutem/bin/Salutem.pdb
+Salutem/bin/Salutem.dll
+.vs/Salutem/DesignTimeBuild/.dtbcache
+/.vs
+/Salutem/obj
+/Salutem/bin
+/SalutemBusiness/obj
+/SalutemBusiness/bin
+/SalutemData/bin
+/SalutemData/obj
+/SalutemDomain/bin
+/SalutemDomain/obj
